--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Untitled Document.md</title><style></style></head><body id="preview">
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>TorresLab.md</title><style></style></head><body id="preview">
 <h1><a id="The_Torres_Lab_1"></a>The Torres Lab</h1>
 <hr>
 <h2><a id="Biogeochemistry_at_Rice_University_3"></a>Biogeochemistry at Rice University</h2>
