--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
 	<body id="preview">
 	<h1><a id="The_Torres_Lab_1"></a>The Torres Lab</h1>
 	<hr>
-	<h2><a id="Biogeochemistry_at_Rice_University_3"></a>Biogeochemistry at Rice University</h2>
-	<p>The <strong>Torres Lab</strong> focuses on the biological, chemical, and geologic processes that act to distribute elements across our planet’s surface and interior. While these biogeochemical processes operate across the entire periodic table, the Torres lab is particular interested in the set of elements and compounds that regulate Earth’s habitability. For example, the Torres Lab is deeply focused on the cycling of water, carbon, and oxygen across a range of surface environments. For more detail, please see the research page (comming soon).</p>
-	<p>Prospective students, post-docs, and collaborators are encouraged to contact Dr. Mark Torres directly at mtorres (at) caltech (dot) edu.</p>
-	<p><strong>Please note that Dr. Torres will not officially start at Rice until Fall 2017</strong></p>
-
+	<h2><a id="Biogeochemistry_at_Rice_University_3"></a>Biogeochemistry at 
+		Rice University</h2>
+	<p>
+		The <strong>Torres Lab</strong> focuses on the biological, chemical, and 
+		geologic processes that act to distribute elements across our planet’s 
+		surface and interior. While these biogeochemical processes operate across 
+		the entire periodic table, the Torres lab is particular interested in the 
+		set of elements and compounds that regulate Earth’s habitability. 
+		For example, the Torres Lab is deeply focused on the cycling of water, 
+		carbon, and oxygen across a range of surface environments. 
+		For more detail, please see the research page (<em>comming soon</em>).
+	</p>
+	
+	<p>
+	Prospective students, post-docs, and collaborators are encouraged to contact 
+	Dr. Mark Torres directly at mtorres (at) caltech (dot) edu.
+	</p>
+	<p>
+	<strong>Please note that Dr. Torres will not officially start at Rice 
+	until Fall 2017</strong>
+	</p>
 	</body>
 </html>
