--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8"><title>Torres-Lab</title><style></style>
-	<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>	
-	<body id="preview">
+---
+layout: default
+title: Torres-lab
+---
+<div class="blurb">
 	<h1><a id="The_Torres_Lab_1"></a>The Torres Lab</h1>
 	<hr>
 	<h2><a id="Biogeochemistry_at_Rice_University_3"></a>Biogeochemistry at 
@@ -29,5 +26,4 @@
 	<strong>Please note that Dr. Torres will not officially start at Rice 
 	until Fall 2017</strong>
 	</p>
-	</body>
-</html>
+</div><!--/.blurb -->
