--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@ layout: default
 title: Torres-lab
 ---
 <div class="blurb">
-	<h1><a id="The_Torres_Lab_1"></a>The Torres Lab</h1>
-	<hr>
-	<h2><a id="Biogeochemistry_at_Rice_University_3"></a>Biogeochemistry at 
-		Rice University</h2>
+	<img class="thumbnail" src="https://dl.dropboxusercontent.com/u/7899940/lab_logo.png">
 	<p>
 		The <strong>Torres Lab</strong> focuses on the biological, chemical, and 
 		geologic processes that act to distribute elements across our planet’s 
