--- a/Research/index.html
+++ b/Research/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Torres lab Research
 ---
 <div class="blurb">
-	<h1>Research</h1>
+	<img class="thumbnail" src="https://dl.dropboxusercontent.com/u/7899940/Research_pic.png">
 	<p>coming soon</p>
 </div><!-- /.blurb -->
