--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Torres-lab
 		The <strong>Torres Lab</strong> focuses on the biological, chemical, and 
 		geologic processes that act to distribute elements across our planet’s 
 		surface and interior. While these biogeochemical processes operate across 
-		the entire periodic table, the Torres lab is particular interested in the 
+		the entire periodic table, the Torres lab is particularly interested in the 
 		set of elements and compounds that regulate Earth’s habitability. 
 		For example, the Torres Lab is deeply focused on the cycling of water, 
 		carbon, and oxygen across a range of surface environments. 
