--- a/Research/index.html
+++ b/Research/index.html
@@ -4,5 +4,26 @@ title: Torres lab Research
 ---
 <div class="blurb">
 	<img class="thumbnail" src="https://dl.dropboxusercontent.com/u/7899940/Research_pic.png">
-	<p>coming soon</p>
+	<h2><a id="Research_Interests_0"></a>Research Interests</h2>
+	<h3><a id="WaterRock_Interaction_1"></a>Water/Rock Interaction</h3>
+<p>The interaction between water and rock near Earth’s surface drives a suite of
+dissolution/precipitation, acid/base, and reduction/oxidation reactions collectively
+called chemical weathering. These reactions are a major source of dissolved elements to
+natural waters and account for large transfers of carbon, oxygen, phosphorus, and sulfur
+between the rock reservoir and the ocean/atmosphere system. Linkages between chemical
+weathering processes and environmental conditions give rise to multiple feedbacks and
+forcings on the Earth system that remain to be completely understood.</p>
+<h3><a id="Organic_carbon_transport_and_burial_9"></a>Organic carbon transport and burial</h3>
+<p>Like weathering, the synthesis of organic matter and its subsequent transport, storage,
+and degradation is key to the biogeochemical cycling of C, O, P, and S. However, organic
+matter cycling obeys a completely different set of <em>rules</em> than weathering, adding
+a richer set of dynamics to major biogeochemical cycles.</p>
+<h3><a id="Approaches_14"></a>Approaches</h3>
+<p>In order to study chemical weathering and organic carbon cycling across a range of spatial and temporal scales, we utilize some combination of laboratory experiments, field studies, and numerical modelling. Present research interests include:</p>
+<ol>
+<li>calibrating trace element and isotope proxies for weathering and organic carbon cycling</li>
+<li>parameterizing weathering and organic carbon feedbacks for use in Earth system models</li>
+<li>linking weathering and organic carbon cycling to erosion and sediment transport processes</li>
+</ol>
+
 </div><!-- /.blurb -->
