--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@ title: Torres-lab
 		set of elements and compounds that regulate Earth’s habitability. 
 		For example, the Torres Lab is deeply focused on the cycling of water, 
 		carbon, and oxygen across a range of surface environments. 
-		For more detail, please see the research page (<em>comming soon</em>).
+	</p>
+	<p>
+		Please see the research page for some broad descriptions of the Torres Lab's current 
+		research interests. While we strive to work across disciplines, our primary <em>tools</em> 
+		are geochemical in nature.
 	</p>
 	
 	<p>
