--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Torres-lab
 		carbon, and oxygen across a range of surface environments. 
 	</p>
 	<p>
-		Please see the research page for some broad descriptions of the Torres Lab's current 
+		Please see the research page <a href="/Research">Research</a> for some broad descriptions of the Torres Lab's current 
 		research interests. While we strive to work across disciplines, our primary <em>tools</em> 
 		are geochemical in nature.
 	</p>
