--- a/cv/index.html
+++ b/cv/index.html
@@ -3,5 +3,5 @@ layout: default
 title: CV
 ---
 <div class="blurb">
-	<p> coming soon </p>
+	<p> <a href="https://dl.dropboxusercontent.com/u/7899940/c-v.pdf">Link to CV</a> </p>
 </div><!-- /.blurb -->
