--- a/cv/index.html
+++ b/cv/index.html
@@ -4,4 +4,7 @@ title: CV
 ---
 <div class="blurb">
 	<p> <a href="https://dl.dropboxusercontent.com/u/7899940/c-v.pdf">Link to CV</a> </p>
+	<p> <a href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&hl=en&oi=ao">Link to Google Scholar page</a> </p>
+
+	
 </div><!-- /.blurb -->
