--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,8 @@ layout: default
 title: CV
 ---
 <div class="blurb">
+	
+	<img class="thumbnail" src="https://dl.dropboxusercontent.com/u/7899940/DSC_2550.png">
 	<p> <a href="https://dl.dropboxusercontent.com/u/7899940/c-v.pdf">Link to CV (updated 6/2016)</a> </p>
 	<p> <a href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&hl=en&oi=ao">Link to Google Scholar page</a> </p>
 
