--- a/cv/index.html
+++ b/cv/index.html
@@ -5,9 +5,8 @@ title: CV
 <div class="blurb">
 	<img class="thumbnail" src="https://dl.dropboxusercontent.com/u/7899940/DSC_2550.png">
 	<h2> Dr. Mark Albert Torres </h2>
-	<p> Texaco/AGEP Postdoctoral Research Fellow - California Institute of Technology</p>
-	<p> Hometown: San Dimas, CA </p>
-	<p> On the turntable: Wilco - Yankee Hotel Foxtrot</p>
+	<p> Texaco/AGEP Postdoctoral Research Fellow</p>
+	<p> California Institute of Technology</p>
 	<p> <a href="https://dl.dropboxusercontent.com/u/7899940/c-v.pdf">Link to CV (updated 6/2016)</a> </p>
 	<p> <a href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&hl=en&oi=ao">Link to Google Scholar page</a> </p>
 </div><!-- /.blurb -->
