--- a/cv/index.html
+++ b/cv/index.html
@@ -9,4 +9,5 @@ title: CV
 	<p> California Institute of Technology</p>
 	<p> <a href="https://dl.dropboxusercontent.com/u/7899940/c-v.pdf">Link to CV (updated 6/2016)</a> </p>
 	<p> <a href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&hl=en&oi=ao">Link to Google Scholar page</a> </p>
+	<p>twitter: <a href="https://twitter.com/Dr_Mark_Torres">@Dr_Mark_Torres</a></p>
 </div><!-- /.blurb -->
