--- a/cv/index.html
+++ b/cv/index.html
@@ -7,6 +7,7 @@ title: CV
 	<h2> Dr. Mark Albert Torres </h2>
 	<p> Texaco/AGEP Postdoctoral Research Fellow</p>
 	<p> California Institute of Technology</p>
+	<p> email: mtorres (at) caltech (dot) edu</p>
 	<p> <a href="https://dl.dropboxusercontent.com/u/7899940/c-v.pdf">Link to CV (updated 6/2016)</a> </p>
 	<p> <a href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&hl=en&oi=ao">Link to Google Scholar page</a> </p>
 	<p>twitter: <a href="https://twitter.com/Dr_Mark_Torres">@Dr_Mark_Torres</a></p>
