--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@ title: Torres-lab
 	
 	<p>
 	Prospective students, post-docs, and collaborators are encouraged to contact 
-	Dr. Mark Torres directly at mtorres (at) caltech (dot) edu.
-	<strong>Please note that Dr. Torres will not officially start at Rice 
-	until Fall 2017</strong>
+	Dr. Mark Torres directly at Mark (dot) Torres (at) Rice (dot) edu.
 	</p>
 </div><!--/.blurb -->
