--- a/cv/index.html
+++ b/cv/index.html
@@ -5,8 +5,7 @@ title: CV
 <div class="blurb">
 	<img class="thumbnail" src="https://dl.dropboxusercontent.com/u/7899940/DSC_2550.png">
 	<h2> Dr. Mark Albert Torres </h2>
-	<p> Assistant Professor </p>
-	<p> Rice University </p>
+	<p> Assistant Professor - Rice University </p>
 	<p> Department of Earth, Environmental, & Planetary Sciences </p>
 	<p> email: mt61 (at) rice (dot) edu</p>
 	<p> <a href="https://dl.dropboxusercontent.com/u/7899940/c-v.pdf">Link to CV (updated 5/2017)</a> </p>
