--- a/cv/index.html
+++ b/cv/index.html
@@ -3,12 +3,12 @@ layout: default
 title: CV
 ---
 <div class="blurb">
-	<img class="thumbnail" src="https://www.dropbox.com/s/j27pt95qmt9n1tr/DSC_2550.png?dl=0">
+	<img class="thumbnail" src="https://www.dropbox.com/s/j27pt95qmt9n1tr/DSC_2550.png">
 	<h2> Dr. Mark Albert Torres </h2>
 	<p> Assistant Professor - Rice University </p>
 	<p> Department of Earth, Environmental, & Planetary Sciences </p>
 	<p> email: mt61 (at) rice (dot) edu</p>
-	<p> <a href="https://www.dropbox.com/s/1t9wejbjgrineme/c-v.pdf?dl=0">Link to CV (updated 5/2017)</a> </p>
+	<p> <a href="https://www.dropbox.com/s/1t9wejbjgrineme/c-v.pdf">Link to CV (updated 5/2017)</a> </p>
 	<p> <a href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&hl=en&oi=ao">Link to Google Scholar page</a> </p>
 	<p>twitter: <a href="https://twitter.com/Dr_Mark_Torres">@Dr_Mark_Torres</a></p>
 </div><!-- /.blurb -->
