--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout: default
 title: CV
 ---
 <div class="blurb">
-	<img class="thumbnail" src="https://rice.box.com/v/cvphotoMT">
+	<img class="thumbnail" src="torres-lab.github.io/pictures/DSC_2550.png">
 	<h2> Dr. Mark Albert Torres </h2>
 	<p> Assistant Professor - Rice University </p>
 	<p> Department of Earth, Environmental, & Planetary Sciences </p>
