--- a/Research/index.html
+++ b/Research/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Torres lab Research
 ---
 <div class="blurb">
-	<img class="thumbnail" src="pictures/Research_pic.png">
+	<img src="pictures/Research_pic.png" class="thumbnail" alt="">
 	<h2><a id="WaterRock_Interaction_1"></a>Water/Rock Interaction</h2>
 <p>The interaction between water and rock near Earth’s surface drives a suite of
 dissolution/precipitation, acid/base, and reduction/oxidation reactions collectively
@@ -22,7 +22,7 @@ a richer set of dynamics to major biogeochemical cycles.</p>
 <ol>
 <li>calibrating trace element and isotope proxies for weathering and organic carbon cycling</li>
 <li>parameterizing weathering and organic carbon feedbacks for use in Earth system models</li>
-<li>linking weathering and organic carbon cycling to erosion and sediment transport processes</li>
+<li>linking weathering and organic carbon cycling with erosion and sediment transport processes</li>
 </ol>
 
 </div><!-- /.blurb -->
