--- a/Research/index.html
+++ b/Research/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Torres lab Research
 ---
 <div class="blurb">
-	<img src="pictures/Research_pic.png" class="thumbnail" alt="">
+	<img src="/pictures/Research_pic.png" class="thumbnail" alt="">
 	<h2><a id="WaterRock_Interaction_1"></a>Water/Rock Interaction</h2>
 <p>The interaction between water and rock near Earth’s surface drives a suite of
 dissolution/precipitation, acid/base, and reduction/oxidation reactions collectively
