--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Torres-lab
 ---
 <div class="blurb">
-	<img class="thumbnail" src="https://dl.dropboxusercontent.com/u/7899940/lab_logo.png">
+	<img class="thumbnail" src="lab_logo.png">
 	<p>
 		The <strong>Torres Lab</strong> focuses on the biological, chemical, and 
 		geologic processes that act to distribute elements across our planet’s 
