--- a/Lab/index.html
+++ b/Lab/index.html
@@ -1,1 +1,10 @@
+---
+layout: default
+title: Torres lab facilities
+---
+<div class="blurb">
+	<img src="228B.jpg" class="thumbnail" alt="">
+	<img src="228A.jpg" class="thumbnail" alt="">
+	<img src="300.jpg" class="thumbnail" alt="">
 
+</div><!-- /.blurb -->
