--- a/Lab/index.html
+++ b/Lab/index.html
@@ -4,6 +4,8 @@ title: Torres lab facilities
 ---
 <div class="blurb">
 	<img src="228B.jpg" class="thumbnail" alt="">
+	<p> Instrument Space: ThermoFischer iCap TQ-ICP-MS, ThermoFisher Integrion Ion Chromatograph, 
+and a Picarro Cavity Ringdown spectrometer</p>
 	<img src="228A.jpg" class="thumbnail" alt="">
 	<img src="300.jpg" class="thumbnail" alt="">
 
