--- a/Lab/index.html
+++ b/Lab/index.html
@@ -4,9 +4,12 @@ title: Torres lab facilities
 ---
 <div class="blurb">
 	<img src="228B.jpg" class="thumbnail" alt="">
-	<p> Instrument Space: ThermoFischer iCap TQ-ICP-MS, ThermoFisher Integrion Ion Chromatograph, 
-and a Picarro Cavity Ringdown spectrometer</p>
+	<p> Instrument Space: ThermoFisher iCap TQ-ICP-MS, ThermoFisher Integrion Ion Chromatograph, 
+and a Picarro L2130-i water isotope analyzer</p>
 	<img src="228A.jpg" class="thumbnail" alt="">
+	<p> Water Prep Space: HEPA-filtered fume hood, balance, Milli-Q system </p>
 	<img src="300.jpg" class="thumbnail" alt="">
+	<p> Sediment Prep Space: HEPA-filtered fume hood, conventional fume hood, Milli-Q system, 
+		Centrifuge, Drying Oven, Vertical Laminar Flow Bench, Sonicator.
 
 </div><!-- /.blurb -->
