--- a/Lab/index.html
+++ b/Lab/index.html
@@ -10,6 +10,6 @@ and a Picarro L2130-i water isotope analyzer</p>
 	<p> Water Prep Space: HEPA-filtered fume hood, balance, Milli-Q system </p>
 	<img src="300.jpg" class="thumbnail" alt="">
 	<p> Sediment Prep Space: HEPA-filtered fume hood, conventional fume hood, Milli-Q system, 
-		Centrifuge, Drying Oven, Vertical Laminar Flow Bench, Sonicator.
+		Centrifuge, Drying Oven, Vertical Laminar Flow Bench, Sonicator.</p>
 
 </div><!-- /.blurb -->
