--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,7 @@ title: CV
 	<p> Assistant Professor - Rice University </p>
 	<p> Department of Earth, Environmental, & Planetary Sciences </p>
 	<p> email: mt61 (at) rice (dot) edu</p>
-	<p> <a href="https://www.dropbox.com/s/1t9wejbjgrineme/c-v.pdf">Link to CV (updated 5/2017)</a> </p>
+	<p> <a href="https://www.dropbox.com/s/1t9wejbjgrineme/c-v.pdf?dl=0">Link to CV (updated 9/2018)</a> </p>
 	<p> <a href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&hl=en&oi=ao">Link to Google Scholar page</a> </p>
 	<p>twitter: <a href="https://twitter.com/Dr_Mark_Torres">@Dr_Mark_Torres</a></p>
 </div><!-- /.blurb -->
