--- a/Research.html
+++ b/Research.html
@@ -29,7 +29,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-grey-10 u-header u-header" id="sec-533e"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-grey-10 u-header u-header" id="sec-533e"><div class="u-clearfix u-sheet u-valign-bottom u-sheet-1">
         <img class="u-expand-resize u-image u-image-1" src="images/torreslablogoNew2.png" data-image-width="1460" data-image-height="672">
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
@@ -40,23 +40,23 @@
 </defs></svg>
             </a>
           </div>
-          <div class="u-nav-container">
+          <div class="u-custom-menu u-nav-container">
             <ul class="u-custom-font u-nav u-text-font u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-palette-2-base u-text-palette-5-dark-1" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-palette-2-base u-text-palette-5-dark-1" href="Research.html" style="padding: 10px 20px;">Research</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-palette-2-base u-text-palette-5-dark-1" href="People.html" style="padding: 10px 20px;">People</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-palette-2-base u-text-palette-5-dark-1" href="Lab.html" style="padding: 10px 20px;">Lab</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-palette-2-base u-text-palette-5-dark-1" href="Blog.html" style="padding: 10px 20px;">Blog</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-black u-text-hover-palette-2-base u-text-palette-5-dark-1" href="https://torres-lab.github.io/blog/" style="padding: 10px 20px;">Blog</a>
 </li></ul>
           </div>
-          <div class="u-nav-container-collapse">
+          <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Research.html">Research</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="People.html">People</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Lab.html">Lab</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Blog.html">Blog</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Research.html" style="padding: 10px 20px;">Research</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="People.html" style="padding: 10px 20px;">People</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Lab.html" style="padding: 10px 20px;">Lab</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://torres-lab.github.io/blog/" style="padding: 10px 20px;">Blog</a>
 </li></ul>
               </div>
             </div>
@@ -66,7 +66,6 @@
       </div></header>
     <section class="u-clearfix u-white u-section-1" id="sec-8bf7">
       <img class="u-expand-resize u-image u-image-1" src="images/Research_pic.png" data-image-width="592" data-image-height="276">
-      <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-1"></div>
     </section>
     <section class="u-clearfix u-section-2" id="sec-4dc2">
       <div class="u-clearfix u-sheet u-sheet-1">
@@ -96,8 +95,10 @@
                       <p class="u-text u-text-4">Like weathering, the synthesis of organic matter and its subsequent transport, storage, and degradation is key to the biogeochemical cycling of C, O, P, and S. However, organic matter cycling obeys a completely different set of&nbsp;rules&nbsp;than weathering, adding a richer set of dynamics to major biogeochemical cycles.</p>
                     </div>
                   </div>
-                  <div class="u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-2" src="" data-image-width="1080" data-image-height="1080">
-                    <div class="u-container-layout u-valign-middle u-container-layout-4"></div>
+                  <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-4" src="">
+                    <div class="u-container-layout u-valign-top u-container-layout-4">
+                      <img class="u-expand-resize u-image u-image-2" src="images/54e7d44a4a57a514f6da8c7dda793678153bdee757596c48732f72d0924cc051bc_1280.jpg" data-image-width="1280" data-image-height="720">
+                    </div>
                   </div>
                 </div>
               </div>
