--- a/People.html
+++ b/People.html
@@ -283,7 +283,7 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-10 u-footer" id="sec-e9a9"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Dr. Mark Torres<br>Mark (dot) Torres (at) Rice (dot) edu
         </p>
-        <img src="images/1024px-Google_Scholar_logo.svg.png" alt="" class="u-image u-image-default u-image-1" data-image-width="1024" data-image-height="1024">
+        <img src="images/1024px-Google_Scholar_logo.svg.png" alt="" class="u-image u-image-default u-image-1" data-image-width="1024" data-image-height="1024" data-href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&amp;hl=en" data-target="_blank">
         <img src="images/twitter1.jpg" alt="" class="u-image u-image-default u-image-2" data-image-width="512" data-image-height="268" data-href="https://twitter.com/dr_mark_torres?lang=en" data-target="_blank">
       </div></footer>
   </body>
