--- a/People.html
+++ b/People.html
@@ -79,7 +79,7 @@
                       <h2 class="u-text u-text-1">Dr. Mark Albert Torres</h2>
                       <p class="u-text u-text-2">Assistant Professor - Rice University<br>Department of Earth, Environmental, &amp; Planetary Sciences<br>email: mt61 (at) rice (dot) edu<br>
                         <br>
-                        <a href="files/torres_C_V_.pdf" class="u-btn u-button-link u-button-style u-file-link u-none u-text-palette-1-base u-btn-1">Link to CV (updated 3/2021)</a>
+                        <a href="files/TorresCV2023.pdf" class="u-btn u-button-link u-button-style u-file-link u-none u-text-palette-1-base u-btn-1">Link to CV (updated 2/2023)</a>
                         <br>
                         <br>
                         <a href="https://scholar.google.com/citations?user=3Du3AoYAAAAJ&amp;hl=en&amp;oi=ao" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Link to Google Scholar page</a>
