--- a/People.html
+++ b/People.html
@@ -108,13 +108,13 @@
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <img class="u-absolute-hcenter u-expanded-height u-image u-image-1" src="images/JeanineAsh250.png">
+                  <img class="u-absolute-hcenter u-expanded-height u-image u-image-1" src="images/JWF_5389.jpg">
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <h3 class="u-text u-text-2">Dr. Jeanine Ash</h3>
-                  <p class="u-text u-text-3">Jeanine is a postdoc affiliated with the Center for Dark Energy Biosphere Investigations Postdoctoral Fellow at Rice University. She uses the&nbsp;natural abundances of molecules with more than one rare isotope substitution to explore how microbial metabolisms contribute to global biogeochemical cycles.&nbsp;</p>
+                  <h3 class="u-text u-text-2">Dr. Evan Ramos </h3>
+                  <p class="u-text u-text-3">Evan is an NSF and DOE-sponsored postdoc. He uses Lithium isotopes to explore global biogeochemical cycles.&nbsp;</p>
                 </div>
               </div>
             </div>
