--- a/People.html
+++ b/People.html
@@ -129,7 +129,7 @@
                     <div class="u-container-style u-layout-cell u-left-cell u-size-60 u-layout-cell-3">
                       <div class="u-container-layout u-valign-top u-container-layout-3">
                         <h3 class="u-text u-text-4">Dr. Dan Johnson</h3>
-                        <p class="u-text u-text-5">Dan is a postdoc in the group who comes to us from Caltech. His PhD work focused on the use of sulfur isotopes to better understand fluxes within the modern and ancient marine sulfur cycles. At Rice, he is interested in using a combination of lab experiments, geologic data, and modeling to better understand the controls upon primary productivity and organic matter preservation in sediments.<br>
+                        <p class="u-text u-text-5">Dan is a former postdoc in the group who came from Caltech. His PhD work focused on the use of sulfur isotopes to better understand fluxes within the modern and ancient marine sulfur cycles. At Rice, he used a combination of lab experiments, geologic data, and modeling to better understand the controls upon primary productivity and organic matter preservation in sediments.<br>
                           <a href="https://danjohnsonphd.github.io/website/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">https://danjohnsonphd.github.io/website/</a>
                         </p>
                       </div>
@@ -242,7 +242,7 @@
                   </div>
                   <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-container-layout-2">
-                      <h3 class="u-text u-text-2">Jack Sheehan</h3>
+                      <h3 class="u-text u-text-2">Valentina Osorio</h3>
                     </div>
                   </div>
                 </div>
